[gd_scene load_steps=5 format=3 uid="uid://cimbnhhermucy"]

[ext_resource type="Script" uid="uid://k0vbt4r1gvu0" path="res://ui/PartySummaryUI.gd" id="1_hokt6"]
[ext_resource type="PackedScene" uid="uid://b1ycsca7qo073" path="res://ui/CharacterSummaryUI.tscn" id="2_dibcj"]
[ext_resource type="Texture2D" uid="uid://bu4i6uwbeww7j" path="res://ui/difficulty_atlas_texture_background.tres" id="2_kchre"]
[ext_resource type="Texture2D" uid="uid://daysrbhdeip5v" path="res://ui/difficulty_atlas_texture.tres" id="3_dibcj"]

[node name="PartySummaryUI" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_hokt6")
character_summary_scene = ExtResource("2_dibcj")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
text = "Test"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 2
text = "Current Level"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="LevelBar" type="TextureProgressBar" parent="CenterContainer"]
texture_repeat = 2
layout_mode = 2
max_value = 5.0
step = 0.1
value = 2.5
texture_under = ExtResource("2_kchre")
texture_progress = ExtResource("3_dibcj")

[node name="CharacterSummariesScrollArea" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 0

[node name="CharacterSummaries" type="HBoxContainer" parent="CharacterSummariesScrollArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="CharacterSummaryUI" parent="CharacterSummariesScrollArea/CharacterSummaries" instance=ExtResource("2_dibcj")]
layout_mode = 2

[node name="CharacterSummaryUI2" parent="CharacterSummariesScrollArea/CharacterSummaries" instance=ExtResource("2_dibcj")]
layout_mode = 2
